update deployment workflow

--- a/.github/workflows/sample-build.yml
+++ b/.github/workflows/sample-build.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - nodebb-f24-translator
+name: Build and deploy Python app to Azure Web App - translator-service-kale
 
 on:
   push:
@@ -31,6 +31,9 @@ jobs:
         run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Run PyTest test suite
+        run: pytest
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
@@ -43,7 +46,7 @@ jobs:
             !venv/
 
   deploy:
-    if: github.repository == 'CMU-313/translator-service'
+    if: github.repository == 'kaylalei/translator-service'
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -63,6 +66,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'nodebb-f24-translator'
+          app-name: 'translator-service-kale'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5E9EF844E83149E8AA70EA7E1D9BE629 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_678D5B15431242049C88E11244A12874 }}
