add api key as environment variable

--- a/.github/workflows/sample-build.yml
+++ b/.github/workflows/sample-build.yml
@@ -32,6 +32,8 @@ jobs:
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       - name: Run PyTest test suite
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
         run: pytest
 
       - name: Zip artifact for deployment
